--- a/super-mariomon-frontend/src/style.css
+++ b/super-mariomon-frontend/src/style.css
@@ -5,7 +5,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,6 +14,7 @@
 
 a {
   font-weight: 500;
+padding: 1.2em;
   color: #646cff;
   text-decoration: inherit;
 }
@@ -78,8 +78,6 @@ button:focus-visible {
   }
 }
 .container {
-  min-height: 100vh;
-  background-color: #1e1e1e;
   color: white;
   display: flex;
   flex-direction: column;
